--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
   }
 
   body {
-    @apply font-geist overflow-x-hidden;
+    @apply font-geist overflow-x-hidden text-lg max-sm:text-base;
   }
 
   @layer utilities {
