added more activities to the homepage

--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,12 @@
   }
 
   body {
-    @apply font-geist overflow-x-hidden text-lg max-sm:text-base;
+    @apply font-geist overflow-x-hidden text-base;
   }
 
   @layer utilities {
     .maxW {
-      @apply max-w-screen-md mx-auto w-full;
+      @apply max-w-screen-xl mx-auto w-full;
     }
     .padX {
       @apply px-12 max-xl:px-8 max-md:px-4;
